# ollamalocalchat

./: README.md  pyproject.toml
chatollama/: app.py
