[tool.poetry]
name = "chatollama"
version = "0.1.0"
description = ""
authors = ["Dion Boles <dion.boles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
langchain = "^0.3.3"
langchain-ollama = "^0.2.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
